# Colorful

./: README.md  arduino.ino  main.py  proba.py
controller/: pyproject.toml
controller/controller/: main.py
worker/: arduino.ino
